--- a/compose.yaml
+++ b/compose.yaml
@@ -4,5 +4,10 @@ services:
     build: .
     ports:
       - "8000:5000"
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /code
   redis:
     image: "redis:alpine"
