--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,6 @@
 ---
+include:
+  - infra.yaml
 services:
   web:
     build: .
@@ -9,5 +11,3 @@ services:
         - action: sync
           path: .
           target: /code
-  redis:
-    image: "redis:alpine"
